start adding create button

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<title>Spooderfy</title>
 		%svelte.head%
 	</head>
-	<body class="bg-white bg-neutral-900 overflow-x-hidden text-gray-50">
+	<body class="bg-white bg-gun-bare overflow-x-hidden text-gray-50">
 		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
